--- a/AudioMediaPlayer/Base.lproj/Main.storyboard
+++ b/AudioMediaPlayer/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,16 +15,16 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MediaPlayer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AudioMediaPlayer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wZ1-Ml-oif">
-                                <rect key="frame" x="0.0" y="582" width="414" height="180"/>
+                                <rect key="frame" x="0.0" y="744" width="768" height="180"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppI-Vc-AHg">
-                                        <rect key="frame" x="7.0000000000000071" y="110" width="126.66666666666669" height="70"/>
+                                        <rect key="frame" x="7" y="110" width="243.5" height="70"/>
                                         <color key="backgroundColor" systemColor="separatorColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="vdh-ma-UvS"/>
@@ -38,7 +38,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ETh-Vp-hzC">
-                                        <rect key="frame" x="143.66666666666666" y="110" width="126.66666666666666" height="70"/>
+                                        <rect key="frame" x="260.5" y="110" width="243.5" height="70"/>
                                         <color key="backgroundColor" systemColor="separatorColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="McR-1m-U2C"/>
@@ -52,7 +52,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vv3-rP-z3G">
-                                        <rect key="frame" x="280.33333333333331" y="110" width="126.66666666666669" height="70"/>
+                                        <rect key="frame" x="514" y="110" width="243.5" height="70"/>
                                         <color key="backgroundColor" systemColor="separatorColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="rSm-zD-7d1"/>
@@ -66,7 +66,7 @@
                                         </connections>
                                     </button>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8JY-UQ-JCv">
-                                        <rect key="frame" x="28" y="10" width="358" height="31"/>
+                                        <rect key="frame" x="48" y="10" width="672" height="31"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
@@ -74,7 +74,7 @@
                                         </connections>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="start time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zg-qf-6BO">
-                                        <rect key="frame" x="-3" y="45" width="66" height="21"/>
+                                        <rect key="frame" x="9" y="45" width="82" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="250" constant="40" id="Lg6-X7-xzl"/>
                                             <constraint firstAttribute="height" constant="21" id="qvn-kI-mKa"/>
@@ -87,7 +87,7 @@
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Y8-5b-gno">
-                                        <rect key="frame" x="354" y="45" width="60.333333333333314" height="21"/>
+                                        <rect key="frame" x="680.5" y="45" width="75" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" priority="250" constant="42" id="POa-WN-sjN"/>
                                             <constraint firstAttribute="height" constant="21" id="l1c-gb-LbX"/>
@@ -125,16 +125,24 @@
                                     <constraint firstItem="ETh-Vp-hzC" firstAttribute="width" secondItem="wZ1-Ml-oif" secondAttribute="width" multiplier="0.33" constant="-10" id="hsi-M7-kpP"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dU7-HQ-P2G">
+                                <rect key="frame" x="30" y="100" width="708" height="544"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="LBb-0D-O8d"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wZ1-Ml-oif" secondAttribute="trailing" id="Scr-W5-wVT"/>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="eE2-k6-yCi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dU7-HQ-P2G" secondAttribute="trailing" constant="30" id="eFy-HN-mn8"/>
                             <constraint firstItem="wZ1-Ml-oif" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n7L-LJ-vMV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wZ1-Ml-oif" secondAttribute="bottom" constant="100" id="ooA-7P-QmX"/>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="bottom" secondItem="wZ1-Ml-oif" secondAttribute="top" constant="-100" id="qEK-Uw-g5q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="audioImageView" destination="dU7-HQ-P2G" id="oBP-by-7g3"/>
                         <outlet property="containerView" destination="wZ1-Ml-oif" id="lFe-cH-RtB"/>
                         <outlet property="currentTimeLbl" destination="2zg-qf-6BO" id="86b-Ve-TQ7"/>
                         <outlet property="nextBtn" destination="Vv3-rP-z3G" id="pFB-3x-o9n"/>
