--- a/AudioMediaPlayer/Base.lproj/Main.storyboard
+++ b/AudioMediaPlayer/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
                                     </button>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8JY-UQ-JCv">
                                         <rect key="frame" x="48" y="10" width="672" height="31"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <action selector="sliderChangedAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="ozS-XJ-zoV"/>
@@ -100,7 +100,7 @@
                                         </variation>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="ETh-Vp-hzC" secondAttribute="bottom" id="0Fv-B2-hrS"/>
                                     <constraint firstItem="8JY-UQ-JCv" firstAttribute="leading" secondItem="wZ1-Ml-oif" secondAttribute="leading" constant="30" id="5DB-kt-1xf">
@@ -126,18 +126,33 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dU7-HQ-P2G">
-                                <rect key="frame" x="30" y="100" width="708" height="544"/>
+                                <rect key="frame" x="40" y="150" width="688" height="514"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H00-Tv-yRm">
+                                <rect key="frame" x="40" y="50" width="688" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="6Dq-A8-rVl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="LBb-0D-O8d"/>
+                            <constraint firstItem="H00-Tv-yRm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="AFR-Hg-lHM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wZ1-Ml-oif" secondAttribute="trailing" id="Scr-W5-wVT"/>
-                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="eE2-k6-yCi"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dU7-HQ-P2G" secondAttribute="trailing" constant="30" id="eFy-HN-mn8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H00-Tv-yRm" secondAttribute="trailing" constant="40" id="WYr-zp-bhk"/>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="eE2-k6-yCi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dU7-HQ-P2G" secondAttribute="trailing" constant="40" id="eFy-HN-mn8"/>
+                            <constraint firstItem="H00-Tv-yRm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="gRD-LB-4z5"/>
                             <constraint firstItem="wZ1-Ml-oif" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n7L-LJ-vMV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wZ1-Ml-oif" secondAttribute="bottom" constant="100" id="ooA-7P-QmX"/>
-                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="bottom" secondItem="wZ1-Ml-oif" secondAttribute="top" constant="-100" id="qEK-Uw-g5q"/>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="bottom" secondItem="wZ1-Ml-oif" secondAttribute="top" constant="-80" id="qEK-Uw-g5q"/>
+                            <constraint firstItem="dU7-HQ-P2G" firstAttribute="top" secondItem="H00-Tv-yRm" secondAttribute="bottom" constant="50" id="ye1-Xc-r7x"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -149,12 +164,13 @@
                         <outlet property="playBtn" destination="ETh-Vp-hzC" id="Vxr-f9-DJ3"/>
                         <outlet property="previousBtn" destination="ppI-Vc-AHg" id="dhO-wZ-fAg"/>
                         <outlet property="slider" destination="8JY-UQ-JCv" id="lVP-G5-bQI"/>
+                        <outlet property="songTitle" destination="H00-Tv-yRm" id="WDv-9p-V0H"/>
                         <outlet property="totalTimeLabel" destination="2Y8-5b-gno" id="Dhb-f4-roj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
+            <point key="canvasLocation" x="137.5" y="115.42968749999999"/>
         </scene>
     </scenes>
 </document>
